[gd_scene load_steps=8 format=3 uid="uid://dgr0kta03k8ic"]

[ext_resource type="Script" path="res://widgets/roller_knob/RollerKnob.gd" id="1_0fm8q"]
[ext_resource type="Shader" path="res://widgets/roller_knob/RollerKnob.gdshader" id="1_ud2w6"]
[ext_resource type="Shader" path="res://widgets/roller_knob/RollerValueBar.gdshader" id="2_g5ifw"]
[ext_resource type="Shader" path="res://widgets/roller_knob/RollerGlowLabel.gdshader" id="2_qp70s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_akebc"]
resource_local_to_scene = true
shader = ExtResource("2_qp70s")
shader_parameter/direction = Vector2(1, 0)
shader_parameter/intensity = 0.775

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s0mqp"]
resource_local_to_scene = true
shader = ExtResource("2_g5ifw")
shader_parameter/glass_shine_offset = -0.164
shader_parameter/glass_shine_sharpness = 0.074
shader_parameter/glass_shine_opaqueness = 0.126
shader_parameter/vignette_center = 17.042
shader_parameter/vignette_rim = 0.921
shader_parameter/vignette_intensity = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ure2p"]
resource_local_to_scene = true
shader = ExtResource("1_ud2w6")
shader_parameter/scroll = 0.0
shader_parameter/base_color = Color(0.149114, 0.149114, 0.149114, 1)
shader_parameter/markings_frequency = 46.0
shader_parameter/markings_spread = 0.8
shader_parameter/markings_offset = 0.0
shader_parameter/markings_band = 11.266
shader_parameter/markings_band_offset = -0.031
shader_parameter/markings_main_band = 2.677
shader_parameter/markings_main_band_offset = 0.0580001
shader_parameter/markings_band_sharpness = Vector2(0.01, 0.035)
shader_parameter/markings_color = Color(0.843184, 0.843184, 0.843184, 1)
shader_parameter/markings_main_color = Color(0.923899, 0.653429, 0.516652, 1)
shader_parameter/notches_frequency = 3.211
shader_parameter/notches_scale = 0.281
shader_parameter/notches_shine = 0.348
shader_parameter/notches_brightness = 1.867
shader_parameter/notches_band = 1.6
shader_parameter/notches_band_sharpness = Vector2(0.03, 0.045)
shader_parameter/notches_limits_sharpness = Vector2(0.06, 0.26)
shader_parameter/notches_shadow_sharpness = Vector2(0.01, 0.14)
shader_parameter/notches_color = Color(0.596801, 0.60802, 0.650343, 1)
shader_parameter/wheel_height = -0.0299998
shader_parameter/wheel_back_offset = 0.13
shader_parameter/wheel_back_extension = 0.4
shader_parameter/wheel_depth = 0.085
shader_parameter/wheel_depth_sharpness = Vector2(-0.21, 0.57)
shader_parameter/wheel_limits_sharpness = Vector2(0.06, 0.07)
shader_parameter/wheel_warp_power = 2.578
shader_parameter/wheel_warp_factor = 1.011
shader_parameter/wheel_color = Color(0.0182191, 0.0194593, 0.0278257, 1)

[node name="RollerKnob" type="PanelContainer"]
offset_right = 130.0
offset_bottom = 52.0
theme_type_variation = &"RollerKnob"
script = ExtResource("1_0fm8q")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Layout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "XX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueBox" type="VBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Value" type="Control" parent="Layout/ValueBox"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 3

[node name="ValueBar" type="Control" parent="Layout/ValueBox/Value"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_akebc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ValueOverlay" type="Control" parent="Layout/ValueBox/Value"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_s0mqp")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Roller" type="Control" parent="Layout/ValueBox"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ure2p")
custom_minimum_size = Vector2(90, 24)
layout_mode = 2
size_flags_horizontal = 4
